;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-2.4.11:
  * optimization: SLOT-VALUE and (SETF SLOT-VALUE) on method arguments
    specialized to structure classes are compiled to the corresponding
    structure accessor.
  * optimization: calls to SLOT-VALUE (and related operators) on method
    arguments specialized to instances of SB-MOP:FUNCALLABLE-STANDARD-CLASS
    are optimized similarly to calls on method arguments specialized to
    instances of STANDARD-CLASS.

changes in sbcl-2.4.11 relative to sbcl-2.4.10:
  * enhancement: define SB-EXT:*DEFAULT-SOURCE-EXTERNAL-FORMAT* as the
    external format for reading source files (for direct use in LOAD and
    COMPILE-FILE).  On Windows, this defaults to an external format with CRLF
    line-endings.  (lp#720517, reported by Mark David)
  * minor incompatible change: the documentation of
    SB-SEQUENCE:MAKE-SEQUENCE-LIKE has been altered to match its
    implementation regarding the (un)initialization of the sequence if neither
    :INITIAL-CONTENTS nor :INITIAL-ELEMENT is provided.
  * minor incompatible change: the outputs from SB-GROVEL no longer contain
    calls to SB-GROVEL::DEFINE-FOREIGN-ROUTINE, but call
    SB-ALIEN:DEFINE-ALIEN-ROUTINE directly; the definitions of some other
    SB-GROVEL utilities has also changed.
  * platform support:
    ** The system is more likely to build with the musl C library.  (thanks to
       Masatoshi SANO)
    ** It is possible to build 32-bit binaries on NetBSD/x86-64 systems.
       (thanks to Masatoshi SANO)
    ** Stale big-endian ARM code in callbacks is no longer present.
       (lp#2087866, reported by Rongcui Dong)
    ** Correct the encoding of the VPSHUFD AVX2 instruction.  (reported by
       Dmitry Ignatiev)
    ** Implement the PINSRQ SSE instruction and provide access to it in
       SB-SIMD.
    ** Fix some signed/unsigned and 32-bit issues in the runtime leading to
       problems with large --dynamic-space-size.  (lp#2087986)